# recsys_end-to-end-mlops

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  compose.airflow.yml  compose.api.yml  compose.frontend.yml  compose.training.yml  compose.yml  feature_pipeline.Dockerfile  feature_store_offline_server.yaml  model_server.Dockerfile  pyproject.toml  requirements-ui.txt  requirements.txt  training.Dockerfile  ui.Dockerfile
api/: Dockerfile  load_examples.py  logging_utils.py  main.py  models.py  requirements.txt  utils.py
feature_pipeline/dags/: 00-hello_world_dag.py  append_dwh.py  update_features.py
feature_pipeline/dbt/feature_store/: .user.yml  dbt_project.yml  profiles.yml
feature_pipeline/feast/feature_repo/: feature_store.yaml  materialize.py  test_workflow.py
feature_pipeline/feast/feature_repo/parent_asin/: rating_stats.py
feature_pipeline/feast/feature_repo/user/: rating_stats.py
feature_pipeline/notebooks/: 00-append-holdout-to-oltp.py  00-stimulate-oltp.py  00-undo-holdout-to-oltp.py  001-simulate-oltp.ipynb  002-append-holdout-to-oltp.ipynb  003-undo-holdout.ipynb
feature_pipeline/notebooks/output/1763203335/: 001-simulate-oltp.ipynb
feature_pipeline/notebooks/output/1763203551/: 001-simulate-oltp.ipynb
feature_pipeline/notebooks/papermill-output/: 001-simulate-oltp.ipynb  003-undo-holdout.ipynb
init-db/: create-schemas.sh
mlflow/: Dockerfile  requirements.txt
model_server/: service.py
notebooks/: 000-prep-data.py  001-features.ipynb  001-train-pipeline.py  002-batch-rec-pipeline.py  010-prep-item2vec.ipynb  011_item2vec.ipynb  012-ann-index.ipynb  013-batch-precompute.ipynb  014-store-batch-recs.ipynb  015-store-user-item-sequence-recs.ipynb  020-negative-sample.ipynb  021-sequence-model.ipynb  sequences.jsonl
scripts/: check_oltp_max_timestamp.py  check_ranking_metrics.py  get_holdout_user_id.py  test_dagbag.py
src/: dataset.py  init_s3.py  utils.py  vector_search.py
src/sequence/: inference.py  model.py  trainer.py  utils.py
src/skipgram/: dataset.py  inference.py  model.py  trainer.py
ui/: api.py  app.py  query.py  theme.py
(+6 files in other folders)
